command line arguments

--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,8 @@ AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 
 AC_PROG_CC
 
+AC_CHECK_HEADERS([argp.h], [], AC_MSG_ERROR([argp not found]))
+
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([Makefile src/Makefile])
 
